--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 32px;
 }
 
 .header-container {
@@ -84,7 +85,7 @@ body {
 
 select {
     font-family: IBMPlexSans, sans-serif;
-    width: 400px;
+    width: 300px;
     padding: 8px;
     margin: 4px;
     font-size: 20px;
@@ -113,7 +114,7 @@ select {
 }
 
 .header-title{
-    font-size: 64px;
+    font-size: 7vw;
     font-weight: 300;
     font-style: italic;
     margin-bottom: 16px;
